# Flightgear-Delta

./: CMakeLists.txt  README.md  main.cpp  qml.qrc
core/: launchmanager.cpp  launchmanager.h
qml/: main.qml
qml/components/: AircraftCard.qml  AircraftDetailPanel.qml  TopBarButton.qml
qml/pages/: LaunchPage.qml  PreviewPage.qml  SettingsPage.qml
qml/pages/LaunchSubPages/: Aircrafts.qml  Summary.qml
